Bug 1075980 - Be more careful about who holds a reference to the SourceBufferDecoder during initialization.  r=karlt